
2014-02-28
- bdos/fs.h bdos/fsdir.c bdos/fsdrive.c bdos/proc.c: Avoid creating
  duplicate entries in table of current directories. (RFB)

2014-03-01
- bdos/bdosmain.c bdos/fsdir.c: Fix boundary checking for 'current
  directory' array. (RFB)
- bdos/fs.h bdos/fshand.c bdos/proc.c: When creating new process, don't
  increment 'current directory' usage count for dummy entry 0. (RFB)

2014-03-02
- bios/blkdev.c: Atari TOS compatibility: force reserved sector count to
  be at least 1. Suggested by Eero Tamminen. (RFB)

2014-03-03
- include/compat.h include/config.h: Move configuration #defines to
  config.h. (RFB)
- include/compat.h desk/deskmain.c: Code cleanup: remove unused #define. (RFB)
- aes/* desk/*: Code cleanup: eliminate use of compat.h. (RFB)
- bdos/fsdir.c: Do not attempt to track in-use directories (fixes
  bugtracker #13). (RFB)

2014-03-04
- bdos/bdosmain.c bdos/fs.h bdos/fsdir.c bdos/fsdrive.c bdos/proc.c:
  Code cleanup: combine diruse[], dirtbl[] into array of struct. (RFB)
- include/compat.h: Remove, no longer used. (RFB)

2014-03-05
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c bios/xhdi.c: Renamed
  devices[] to units[] for physical units descriptors. (VRI)
- bios/disk.c: Renamed xhdidev to major. (VRI)
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h bios/xbios.c: Always use
  'major' for XHDI device numbers (0 = first physical hard drive, etc.). (VRI)
- bios/disk.c bios/xhdi.c: Renamed xbiosdev to unit. (VRI)

2014-03-06
- bdos/fsdir.c bdos/fsdrive.c: Don't test return value from MGET(DND), it
  only returns if it succeeds. (RFB)
- bdos/fsdrive.c bdos/fsmain.c bdos/fsopnclo.c: Don't test return value
  from MGET(OFD), it only returns if it succeeds. (RFB)
- bdos/fsdir.c bdos/fsopnclo.c: Don't test return value from makofd(), it
  only returns if it succeeds. (RFB)
- bios/blkdev.c bios/disk.c bios/disk.h bios/xhdi.c: Moved XHReadWrite()
  implementation to disk_rw(). (VRI)